fix: implementando actualizacion de update